--- a/plutus-book/doc/auction/english.adoc
+++ b/plutus-book/doc/auction/english.adoc
@@ -61,9 +61,9 @@ adminRedeemer :: RedeemerScript
 adminRedeemer = RedeemerScript $ toData ()
 
 mkAdminValidator :: Admin -> ValidatorScript
-mkAdminValidator = ValidatorScript
-                       . applyScript $$(compileScript [|| \a -> wrapValidator (validateAdmin a) ||])
-                       . lifted
+mkAdminValidator = mkValidatorScript
+                       . applyCode $$(compile [|| \a -> wrapValidator (validateAdmin a) ||])
+                       . liftCode
 
 adminAddress :: Admin -> Address
 adminAddress = scriptAddress . mkAdminValidator
@@ -124,9 +124,9 @@ mkNonFungibleRedeemer :: String -> RedeemerScript
 mkNonFungibleRedeemer name = RedeemerScript $ toData $ TokenName $ C.pack name
 
 mkNonFungibleValidator :: NonFungible -> ValidatorScript
-mkNonFungibleValidator = ValidatorScript
-                       . applyScript $$(compileScript [|| \nf -> wrapValidator (validateNonFungible nf) ||])
-                       . lifted
+mkNonFungibleValidator = mkValidatorScript
+                       . applyCode $$(compile [|| \nf -> wrapValidator (validateNonFungible nf) ||])
+                       . liftCode
 
 nonFungibleAddress :: NonFungible -> Address
 nonFungibleAddress = scriptAddress . mkNonFungibleValidator
@@ -550,7 +550,7 @@ eaStateMachine ea = StateMachine
     }
 
 mkEAValidator :: EnglishAuction -> ValidatorScript
-mkEAValidator ea = ValidatorScript $ $$(compileScript [|| v ||]) `applyScript` lifted ea
+mkEAValidator ea = mkValidatorScript $ $$(compile [|| v ||]) `applyCode` liftCode ea
     where v ea' = wrapValidator (mkValidator (eaStateMachine ea'))
 
 eaAddress :: EnglishAuction -> Address
