--- a/plutus-tutorial/doc/03-wallet-api.adoc
+++ b/plutus-tutorial/doc/03-wallet-api.adoc
@@ -108,15 +108,7 @@ We can encode the two possible actions in a data type called `Action`.
 ----
 data CampaignAction = Collect | Refund
 
-instance PlutusTx.IsData CampaignAction where
-    toData Collect = PlutusTx.Constr 0 []
-    toData Refund = PlutusTx.Constr 1 []
-    {-# INLINABLE fromData #-}
-    fromData (PlutusTx.Constr i [])
-        | i == 0 = Just Collect
-        | i == 1 = Just Refund
-    fromData _ = Nothing
-
+PlutusTx.makeIsData ''CampaignAction
 PlutusTx.makeLift ''CampaignAction
 ----
 
